@@ -1,3 +1,9 @@
+globus-gridftp-server (12.12-1+gt6.@distro@) @distro@; urgency=low
+
+  * log remote http connection address for legacy s3 transfers
+
+ -- Globus Toolkit <support@globus.org>  Tue, 28 Aug 2018 11:32:25 -0500
+
 globus-gridftp-server (12.11-1+gt6.@distro@) @distro@; urgency=low
 
   * log remote http connection address for legacy s3 transfers
